stacks/media/sonarr/sonarr-ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: whoami
  # namespace: default
spec:
  entryPoints:
    - websecure
    # - web
  routes:
    - match: Host(`whoami.localhost`)
      kind: Rule
      middlewares:
        - name: headers-default
      services:
        - name: whoami
          namespace: default
          port: 8989
